Add agent_query model to swagger
